Update 09. No Free Lunch Theorem.md

--- a/notes/Evolutionary-computation/09. No Free Lunch Theorem.md
+++ b/notes/Evolutionary-computation/09. No Free Lunch Theorem.md
@@ -1,31 +1,50 @@
 # The No Free Lunch Theorem
 
 ## 1.  Black‑Box Optimisation Algorithms
+<img src="../../images/black-box.png" alt="black-box" width="300">
 
-### 1.1  Problem setting
+### 1.1 Problem setting
 
-* **Search space** $X$ — a finite collection of candidate solutions (e.g. all bit‑strings of length $n$).  
-* **Objective function** $f : X \to Y$ where $Y \subseteq \mathbb{R}$.  
-  * We assume *maximisation*; the goal is to find $x^* \in X$ with $f(x^*) = \max_{y\in X} f(y)$.
-* The optimiser may **query** the function at points of its choice but receives only the scalar output $f(x)$.  
-  * No gradients, derivatives or structural hints: hence *black‑box*.
+- **Search space**:  
+  A finite set $X$ of candidate solutions (for example, all bit-strings of length $n$).
 
-### 1.2  Runtime notions
+- **Objective function**:  
+  $$f : X \;\to\; \mathbb{R},$$  
+  where we assume **maximisation**.  Our goal is to find  
+  $$x^* \;=\;\arg\max_{x\in X} f(x),$$  
+  i.e. the solution with the highest score.
 
-* **Runtime of algorithm A on function f**
+- **Black-box queries**:  
+  The optimiser can pick any $x\in X$, ask for $f(x)$, and receive back the scalar value.  
+  - **No additional information** (no gradients, no structure).  
+  - Each query is expensive, so we count how many are needed.
+
+
+### 1.2 Measuring runtime
+
+Let $A$ be a black-box algorithm and $f$ an objective function.
+
+1. **Runtime on a single function**  
+   Define
+   
 
 $$
 T_{A,f} := \min\{\,t\in\mathbb{N}\mid f(x_t)\ge f(y)\ \forall\,y\in X\}
 $$
 
-  where $x_t$ is the $t$‑th point sampled.  
-  *In words:* the number of evaluations until $A$ *first* queries a global optimum.
 
-* **Average expected runtime over a class $\mathcal{F}$**
+   where $x_t$ is the $t$-th point that $A$ queries.  
+   - In plain words: **the number of function evaluations** until $A$ first finds a global optimum.
 
-  $$\mathbb{E}\bigl[T_{A,\mathcal{F}}\bigr]\;:=\;\sum_{f\in\mathcal{F}} \Pr[f] \, \mathbb{E}[T_{A,f}]$$
+2. **Expected runtime over a function class**  
+   Suppose we have a distribution $\Pr[f]$ over a set of functions $\mathcal{F}$.  Then
+   
+$$
+\mathbb{E}\bigl[T_{A,\mathcal{F}}\bigr]
+\;=\;\sum_{f\in\mathcal{F}} \Pr[f]\;\mathbb{E}\bigl[T_{A,f}\bigr].
+$$
 
-  The probability $\Pr[f]$ encodes our belief (or an adversary’s choice) about which function will appear.
+   - This averages the runtime of $A$ across all problems you might face (or across an adversary’s choice).
 
 ### 1.3  General scheme of a black‑box optimiser
 
@@ -40,11 +59,18 @@ $$
        d. Evaluate f(x_t).
 ```
 
-*The only state the algorithm receives is the **history of queried points and their fitness values**.  Any search heuristic that respects this interface—from Random Search to CMA‑ES—fits inside the black‑box model.*
+#### Why this matters
+
+- **Black-box**: you treat $f$ as an oracle—no shortcuts from derivatives or problem structure.  
+- **Runtime**: instead of “time” on a CPU, we count **evaluations** of $f$, which often dominate the cost (e.g.\ expensive simulations, lab experiments).  
+- **Expected analysis**: gives a fair comparison when facing many possible functions or worst-case/adversarial scenarios.
+
+Use these definitions to compare strategies like random search, evolutionary algorithms, and more sophisticated heuristics in a principled way.
 
 ---
 
 ## 2.  The No Free Lunch Theorem
+<img src="https://cdn.prod.website-files.com/64e50cbe2b6f932c04238c14/651bd602d90d60a6dfb6f2bc_6503002ebdc5c740ae7d8f36_no-free-lunch-theorem.webp" alt="NFL" width="400">
 
 ### 2.1  Informal meaning
 
@@ -53,32 +79,68 @@ $$
 
 ### 2.2  Formal statement (Wolpert & Macready 1997)
 
-Let $X$ and $Y\subseteq\mathbb{R}$ be finite.  Let $\mathcal{F}$ be **any** set of functions $f:X\to Y$ that is **closed under permutation** (defined below).  Then for **any** two black‑box optimisation algorithms $A$ and $B$,
+Let $X$ and $Y\subseteq\mathbb{R}$ be finite.  Let $\mathcal{F}$ be **any** set of functions $f:X\to Y$ that is **closed under permutation** (defined below).  Then for **any** two black‑box optimisation algorithms A and B,
 
 $$\mathbb{E}\bigl[T_{A,\mathcal{F}}\bigr] \;=\; \mathbb{E}\bigl[T_{B,\mathcal{F}}\bigr].$$
 
 In other words, **average runtime depends only on the function class, never on the algorithm**.
 
 
-### 2.3  Key definition — *closed under permutation* (c.u.p.)
+### 2.3 Key definition — *Closed Under Permutation* (c.u.p.)
 
-A set of functions $\mathcal{F}$ is **closed under permutation** if  
-$$f \in \mathcal{F} \;\Rightarrow\; f\circ \sigma \in \mathcal{F}\quad\text{for every permutation } \sigma:X\twoheadrightarrow X.$$
+**Definition:**  
+A function class $\mathcal{F}$ over a finite domain $X$ is **closed under permutation** if, for **every**  
 
-*Intuition:* if a landscape sits in the class, every possible relabelling of the search points also sits there.  Hence the class contains *no* structural bias about where good solutions lie.
+$$
+f \in \mathcal{F}
+\quad\text{and every permutation}\quad
+\sigma: X \twoheadrightarrow X,
+$$
 
-#### Worked micro‑example (|X| = 3)
+the *relabelled* function  
 
-| $x$ | $f_1(x)$ | $f_2(x)$ | $f_3(x)$ |
-|-----|----------|----------|----------|
-| ●   | 1        | 2        | 3        |
-| ■   | 2        | 3        | 1        |
-| ▲   | 3        | 1        | 2        |
+$$
+f \circ \sigma : X \;\longrightarrow\; \mathbb{R}
+$$  
 
-The set $\{f_1,f_2,f_3\}$ is *not* c.u.p.; adding the three remaining permutations ($f_4,f_5,f_6$) yields a c.u.p. family of six functions.
+also belongs to $\mathcal{F}$.
+
+> In other words, if you shuffle (“permute”) the input labels, you stay inside the class.
 
 
-### 2.4  Proof sketch
+#### Intuition  
+- A permutation $\sigma$ simply reassigns which element of $X$ is “first,” “second,” etc.  
+- **C.u.p.** means the class has **no built-in bias** about where good solutions lie: any relabelling of a valid landscape is still valid.
+
+
+#### Worked micro-example ($|X| = 3$)
+
+Let $X = \{\bullet, \blacksquare, \triangle\}$ and define
+
+| $x$           | $\bullet$ | $\blacksquare$ | $\triangle$ |
+|:-------------:|:---------:|:--------------:|:-----------:|
+| **$f_1(x)$**  | $1$       | $2$            | $3$         |
+| **$f_2(x)$**  | $2$       | $3$            | $1$         |
+| **$f_3(x)$**  | $3$       | $1$            | $2$         |
+
+- The set $\{f_1,f_2,f_3\}$ is **not** c.u.p. (it’s missing half the permutations).  
+- A fully c.u.p. family on these three points must contain **all 6** relabellings of $\{1,2,3\}$ over $\{\bullet,\blacksquare,\triangle\}$ (call the additional ones $f_4,f_5,f_6$).
+
+Thus the smallest c.u.p. class here is  
+
+$$
+\{\,f_1,f_2,f_3,f_4,f_5,f_6\},
+$$
+
+covering every possible “reshuffle” of the scores.
+
+
+#### Why it matters (No Free Lunch)  
+If $\mathcal{F}$ is c.u.p., **no** black-box optimiser can outperform random search **on average** over $\mathcal{F}$. Any strategy that exploits a pattern in one $f$ is undone by some permuted copy $f\circ\sigma$. This is the essence of the **No Free Lunch** theorem.
+
+---
+
+### 2.4  Proof sketch of NFL
 
 The proof proceeds in two layers:
 
@@ -104,7 +166,7 @@ Below we expand the induction argument in plain language.
 
 ### 3.1  Induction hypothesis  
 
-Assume the theorem holds for all search spaces of size $N$.
+Assume the theorem holds for all search spaces of size N.
 
 ### 3.2  Inductive step: space size $N+1$
 
@@ -137,29 +199,62 @@ Hence the theorem holds for size $N{+}1$, completing induction.
 
 ---
 
-## 4.  How realistic is the NFL scenario?
+## 4. How realistic is the NFL scenario?
 
-### 4.1  Counting argument
+### 4.1 Counting argument: why “random” functions are impossible
 
-Suppose $X$ is the set of 100‑bit strings (size $2^{100}$) and $Y$ the 32‑bit integers (size $2^{32}$).  The number of distinct functions is  
+- **Search space size**  
+  $X = \{0,1\}^{100}$ has $|X| = 2^{100}$ points.
+- **Output space size**  
+  $Y = \{0,\dots,2^{32}-1\}$ has $|Y| = 2^{32}$ possible values.
+- **Number of distinct functions**  
 
-$$|\mathcal{F}| = |Y|^{|X|} = 2^{32\,·\,2^{100}}.$$
+$$
+  \bigl|\mathcal F\bigr|
+  = |Y|^{|X|}
+  = (2^{32})^{2^{100}}
+  = 2^{32\cdot 2^{100}}.
+$$
 
-A simple information‑theoretic bound shows that *at least half* of those functions require programs of length $\ge 32·2^{100}-1$ bits—on the order of $10^{20}$ terabytes!
+- **Information‐theoretic lower bound**  
+  To specify an arbitrary function in this huge set you need at least
 
-> **Take‑away:** The adversarial “draw a totally random function” thought experiment is wildly unrealistic.  Real‑world objectives are generated by physics, economics, or human design—**not** arbitrary bitstrings.
+$$
+  32\cdot 2^{100} - 1
+$$
 
-### 4.2  Almost No Free Lunch (Droste et al. 2002)
+  bits of code—on the order of $10^{20}$ terabytes!
 
-Even when you *do* assume some structure, mildly adversarial tweaks can defeat a fixed optimiser.
+> **Take-away:** Treating the objective as a truly random mapping is completely unrealistic. Real-world objective functions come from physics, biology, economics, etc.—they have structure and compressibility.
 
-* Given any algorithm $A$ and any function $f:\{0,1\}^n\to\{0,\dots,N{-}1\}$, there exist **at least $N\,2^{n/3-1}$ functions** $f^*$ that  
-  * differ from $f$ on at most $2^{n/3}$ inputs; yet  
-  * $A$ fails to locate a maximum within $2^{n/3}$ evaluations with probability ≥ 1 – 2<sup>-n/3</sup>.  
+---
 
-Moreover these “trap” functions can be kept only $O(n)$ bits more complex than $f$.
+### 4.2 Almost No Free Lunch (Droste et al., 2002)
 
-*Practical moral:* **Domain knowledge matters**—but robustness matters too.  Favor heuristics whose *assumptions* align with your problem *and* whose performance degrades gracefully when the assumptions are imperfect.
+Even if you restrict yourself to functions “close” to a nice $f$, there exist subtle adversarial tweaks that foil any fixed optimiser:
+
+1. **Start with any**  
+
+$$
+  f: \{0,1\}^n \to \{0,1,\dots,N-1\}.
+$$
+
+2. **Construct “trap” variants**  
+   There are at least
+
+$$
+  N\,2^{\,n/3 - 1}
+$$
+
+functions $f^*$ which  
+   - **Differ** from $f$ on only $\le 2^{n/3}$ inputs, yet  
+   - **Defeat** algorithm $A$: with probability $\ge 1 - 2^{-n/3}$, $A$ will **not** find the maximum in the first $2^{n/3}$ queries.
+3. **Compact traps**  
+   These $f^*$ only add $O(n)$ bits of description beyond the original $f$.
+
+> **Practical moral:**  
+> - **Use domain knowledge** to narrow the search class to realistic functions.  
+> - **Build robustness**: choose algorithms whose performance degrades gracefully if the problem deviates from your assumptions.
 
 ---
 
